--- a/web/cordova/www/index.html
+++ b/web/cordova/www/index.html
@@ -41,8 +41,12 @@
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
+			  
+			  	<button id="getDeviceInfoBtn">Detect Device</button>
             </div>
         </div>
+		
+	  
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
